19 June 2006: Wouter
	- updated the tpkg/manual tests for NSD 3 config files.
	  Some need root privileges to run (using hping), they all pass.
	- also the tpkg/long test bug_sighup.

16 June 2006: Wouter
	- Swapped read and write ops in xfrd_handle_ipc, so that a read
	  of a signal from main can stop further writes.
	- xfrd will complete its last message before shutting down
	  the ipc writes and then acknowledge the reload-sync.
	  This resolves the race where half of ipc messages caused bad
	  modes from the main.

15 June 2006: Wouter
	- In preparation of notify send overhaul, moved the notify
	  send code to xfrd-notify.c and h files.
	- created cleaner split of notify send and xfr code.
	  Still in the xfr process, because it is a convenient location.
	- fixed bug where notify sending would read from wrong fd.
	- send master zone notifies.
	  Does not skips master zone SOA INFO updates.
	- fixed bug where port number acls did not match.
	- fixed bug where tsig keys are checked for twice, but not error_code.
	- fixed notify send retry counting.
	- added test tpkg for notifies from nsd master to nsd slave.
	- nsd-checkconf flags if you set allow-notify without request-xfr.

14 June 2006: Wouter
	- fixed crash bug when dnssec/NSEC enabled and query DNAME
	  target did not exist.

13 June 2006: Wouter
	- created doc subdirectory for documentation.
	- removed unused DIFF FILE MAGIC string.

12 June 2006: Wouter
	- dname_test tpkg with very extensive DNAME testing.
	- moved sizes of zone_name buffers to 3072 - for escaped names.
	- nsd-patch has a debug option to list the contents of the 
	  difffile/ixfr.db/transfer patch log in a journal fashion. You can
	  then manually inspect the contents.

9 June 2006: Wouter
	- after a reload NSD will report the memory churn: number of bytes
	  of memory wasted by the zone transfer code.

8 June 2006: Wouter
	- When zone is re-chosen after a CNAME/DNAME no SERVFAIL is set,
	  noerror is returned instead.